<resources>
    <string name="app_name">Travel Sapori di Toscana SpA</string>
    <string name="id_terminale">Id. Terminale</string>
    <string name="ftp_server">Ftp Server</string>
    <string name="web_server">Web Server</string>
    <string name="testo">Testo</string>
    <string name="autista">Selezionare un conducente...</string>
    <string name="dtconsegna">Data Consegna</string>
    <string name="targa">Targa</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="wrong_address">Indirizzo non valido</string>
    <string name="wrong_targa">Targa non valido</string>
    <string name="tryme">tryme</string>
    <string name="GetGiroConsegna">GetGiroConsegna</string>
    <string name="GetTravelConsegna">GetTravelConsegna</string>
    <string name="GetTravelConsegnaCollection">GetTravelConsegnaCollection</string>
    <string name="bolleclienti">GetBolleClienti?StringSearch=</string>
    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>
    <string name="dsgiro">Giro</string>
    <string name="documentonp">Documento non presente su Piano di Carico</string>
    <string name="alterTitle">Attenzione</string>
    <string name="chooseSourcePicture">Seleziona una foto</string>
    <string name="erroreAcquisizionePianodicarico">Impossibile acquisire il PIANO DI CARICO. Configurazione terminale non completata</string>
    <string name="errorePartenzaGiro">Impossibile iniziare il giro</string>
    <string name="camerenodisp">Camera non disponibile in stato: </string>
    <string name="gpsnodisp">Servizio LOCALIZZAZIONE disabilitato.</string>
    <string name="playServiceNoDisp">GooglePlayServices disabilitato.</string>
    <string name="title_alert_no_intenet">NO CONNECTION</string>
    <string name="msg_alert_no_internet">Nessuna connessione dati attiva.</string>
    <string name="btn_label_refresh">Aggiorna</string>
    <string name="settings">settings</string>
    <string name="permission_rationale">Please grant location permission to start the service</string>
    <string name="permission_denied_explanation">You have not granted location permission. So the service cannot be started.</string>
    <string name="msg_location_service_started">Location Tracking Started</string>
    <string name="scarica_lbl">Scarica</string>
    <string name="messaggio_conferma_cliente_lbl">Cliente presente ?</string>
    <string name="no">NO</string>
    <string name="si">SI</string>
    <string name="messaggio_giro_errato">Stai provando a carica un giro/consegna non assegnato all\'autista indicato.</string>
    <string name="btn_annulla">Annulla</string>
    <string name="btn_incasso">pagamento</string>
    <string name="btn_variazione_esito">Variazione consegna</string>
    <string name="message_mail_consegna">Consegna effettuata con esito:</string>
    <string name="message_mail_variazione">Variazione esito consegna :</string>
    <string name="pick_image_intent_text">Seleziona una foto</string>
    <string name="prova">prova</string>
    <string name="descrizione_giro">Descrizione Giro</string>
    <string name="inizializza">Scarica</string>
    <string name="viaggio">Partenza</string>
    <string name="scarica">Fine</string>
    <string name="camera">Camera</string>
    <string name="Gallery">Galleria</string>
    <string name="SelezionaFoto">Seleziona Foto</string>
    <string name="update">Aggiornamento della versione</string>
    <string name="server_non_disponibile">Server non disponibile. Riprovare più tardi.</string>
    <string name="btn_comunicazioni">Comunica  ad Amministrazione</string>
    <string name="camerabtn">camera</string>
    <string name="download">download</string>
    <string name="Itinerario">Itinerario</string>
    <string name="Consegne">Consegne</string>
    <string name="seleziona_data">seleziona data consegna</string>
</resources>
