<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity"
    tools:layout_editor_absoluteY="25dp">

    <include
        android:id="@+id/appbarlayout"
        layout="@layout/appbarlayout"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/txTerminale"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/id_terminale"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txTesto"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/testo"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txTerminale" />

    <RelativeLayout
        android:id="@+id/relativeFtp"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txTesto" >

        <EditText
            android:id="@+id/txFtpServer"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:hint="@string/ftp_server"
            android:inputType="textUri" />

        <ImageButton
            android:id="@+id/update_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_update" />

    </RelativeLayout>
    <!--<EditText-->
        <!--android:id="@+id/txFtpServer"-->
        <!--android:layout_width="368dp"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:ems="10"-->
        <!--android:hint="@string/ftp_server"-->
        <!--android:inputType="textUri"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/txTesto" />-->

    <EditText
        android:id="@+id/txWebServer"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/web_server"
        android:inputType="textUri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeFtp" />

    <EditText
        android:id="@+id/txTarga"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/targa"
        android:inputType="textCapCharacters"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txWebServer" />

    <EditText
        android:id="@+id/txAutista"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/autista"
        android:inputType="text"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txTarga" />

    <!--<Spinner-->
        <!--android:id="@+id/ddAutomezzo"-->
        <!--android:layout_width="375dp"-->
        <!--android:layout_height="42dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="24dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:dropDownWidth="match_parent"-->
        <!--android:ems="10"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/txWebServer" />-->

    <Spinner
        android:id="@+id/ddConducente"
        android:layout_width="372dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:dropDownWidth="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txTarga" />

</androidx.constraintlayout.widget.ConstraintLayout>